images to product list

--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -39,7 +39,7 @@
                                <!--Card Image-->
                                <a [routerLink]="['/products/product', product.$key]">
                             <div class="view overlay hm-white-slight">
-                                <img [src]="product.productImgUrl" class="img-fluid" alt="" width="360px" height="640px">
+                                <img [src]="product.productImageUrl" class="img-fluid" alt="" width="360px" height="640px">
                             </div>
                             </a>
                                
