--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -75,11 +75,11 @@
                                             <a placement="top" mdbTooltip="Add to Cart" container="body" (click)="addToCart(product)">
                                                     <i class="fa fa-shopping-cart"></i>
                                                   </a>
-                                                  <a placement="top" mdbTooltip="Remove Product" container="body" *ngIf="authService.isAdmin()"
+                                                  <!--a placement="top" mdbTooltip="Remove Product" container="body" *ngIf="authService.isAdmin()"
                                                        (click)="removeProduct(product.$key)">
                                                            <i class="fa fa-trash"></i>
                         
-                                                </a>
+                                                </a-->
                                         </span>
                                     </div>
 
