--- a/drehendz/src/app/layouts/product/cart-calculator/cart-calculator.component.html
+++ b/drehendz/src/app/layouts/product/cart-calculator/cart-calculator.component.html
@@ -18,7 +18,7 @@
           <span>Total (JMD)</span>
           <strong>${{totalValue}}</strong>
         </li>
-        <a class="btn btn-primary" [routerLink]="['/products/all-products']">Continue Shipping</a>
+        <a class="btn btn-primary" [routerLink]="['/products/all-products']">Continue Shopping</a>
         <a class="btn btn-default" [routerLink]="['/checkouts']">Checkout</a>
       
       </ul>
