build project for hosting

--- a/drehendz/src/app/layouts/product/checkout/products/products.component.html
+++ b/drehendz/src/app/layouts/product/checkout/products/products.component.html
@@ -13,7 +13,7 @@
         </li>
         <hr>
         <li class="list-group-item d-flex justify-content-between">
-            <span>Total(INR) </span>
+            <span>Total(JMD) </span>
             <strong>${{totalPrice}} </strong>
         </li>
 
