--- a/drehendz/src/app/layouts/product/product-detail/product-detail.component.html
+++ b/drehendz/src/app/layouts/product/product-detail/product-detail.component.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
               <th scope="row">No. of quantity available</th>
-              <td>{{product.productQuatity}}</td>
+              <td>{{product.productQuantity}}</td>
             </tr>
             <tr>
               <th scope="row">Product Added on</th>
