--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -69,7 +69,7 @@
                                     <div class="card-footer">
                                       <span class="left">$ {{ product.productPrice }}</span>
                                         <span class="right">
-                                            <a placement="top" mdbTooltip="Add to Wishlist" container="body" (click)="addFavourite(product) " >
+                                            <a placement="top" mdbTooltip="Add to Wishlist" container="body" (click)="addFavorite(product)">
                                                 <i class="fa fa-heart"></i>
                                             </a>
                                             <a placement="top" mdbTooltip="Add to Cart" container="body" (click)="addToCart(product)">
