--- a/drehendz/src/app/layouts/product/checkout/products/products.component.html
+++ b/drehendz/src/app/layouts/product/checkout/products/products.component.html
@@ -21,6 +21,6 @@
     </ul>
 
     <div class="float-right">
-        <a class="btn btn-default" [[routerLink]="['/checkouts', {outlets: {'checkOutlet': ['shipping-details'] } } ]" routerLinkActive="active">Next</a>
+        <a class="btn btn-default" [routerLink]="['/checkouts', {outlets: {'checkOutlet': ['shipping-details'] } } ]" routerLinkActive="active">Next</a>
     </div>
     </div>
