--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
 
     <!--Navbar brand-->
-<a class="navbar-brand" href="#">drehendz</a>
+<a class="navbar-brand" routerLink="/">drehendz</a>
 
   <!--Collapse button-->
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -17,18 +17,12 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 
 <!--Links-->
 <ul class="navbar-nav  ml-auto">
-    <li class="nav-item active">
-        <a class="nav-link" href="#" [routerLink]="['/']"> Home
-          <span class="sr-only">(current)</span>
-        </a>  
-    </li>
+   
     <li class="nav-item">
             <a class="nav-link" href="#" [routerLink]="[ '/products/all-products' ]">Products
               </a>
           </li>   
-          <li class="nav-item">
-            <a class="nav-link" href="jaascript:;;" [routerLink]="[ '/' ]">About</a>
-          </li>     
+         
 </ul>
 
 <!--Links-->
@@ -59,17 +53,28 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 
     <li class="nav-item" *ngIf="authService.isLoggedIn()">
             <a class="nav-link" [routerLink]="['/users']">
-              <i class="fa fa-user mr-1"></i> MY ACCOUNT  </a>
+              <i class="fa fa-user mr-1"></i> {{user.diplayName}}
+             </a>
           </li>
-          <li class="nav-item" *ngIf="!authService.isLoggedIn()">
-                <a class="nav-link" [routerLink]="[ '/login' ]">
-                  <i class="fa fa-sign-in mr-1"></i> SIGNIN </a>
-              </li>
 
-              <li class="nav-item" *ngIf="authService.isLoggedIn()">
-                    <a class="nav-link" (click)="logout()">
-                      <i class="fa fa-sign-in mr-1"></i>LOGOUT</a>
-         </li>
+          <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+            <a class="nav-link" [routerLink]="[ '/login' ]">
+              login </a>
+          </li>
+
+          <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()" >
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{dispayName}}</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" routerLink="/">My Orders</a>
+              <a class="dropdown-item" routerLink="/">Manage Orders</a>
+              <a class="dropdown-item" (click)="logout()">Log out</a>
+
+              </div>
+          </li>
+         
+         
+
+         
         
 </ul>
 
