--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -53,7 +53,7 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 
     <li class="nav-item" *ngIf="authService.isLoggedIn()">
             <a class="nav-link" [routerLink]="['/users']">
-              <i class="fa fa-user mr-1"></i> {{user.diplayName}}
+              <i class="fa fa-user mr-1"></i> 
              </a>
           </li>
 
@@ -66,7 +66,7 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{dispayName}}</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" routerLink="/">My Orders</a>
-              <a class="dropdown-item" routerLink="/">Manage Orders</a>
+              <a class="dropdown-item" *ngIf="authService.isAdmin()" routerLink="/">Manage Orders</a>
               <a class="dropdown-item" (click)="logout()">Log out</a>
 
               </div>
