--- a/drehendz/src/app/layouts/product/add-product/add-product.component.html
+++ b/drehendz/src/app/layouts/product/add-product/add-product.component.html
@@ -57,8 +57,8 @@
                               </div>
 
                               <div class="mb-3">
-                                    <label for="productSeller">Product Seller</label>
-                                    <input type="text" class="form-control" id="productSeller" [(ngModel)]="product.productSeller" name="productSeller" placeholder="Product Seller"
+                                    <label for="productSeller">Product Brand</label>
+                                    <input type="text" class="form-control" id="productSeller" [(ngModel)]="product.productSeller" name="productSeller" placeholder="Product Brand"
                                       required>
                                   </div>
                                   <div class="mb-3">
