--- a/drehendz/src/app/layouts/product/product-detail/product-detail.component.html
+++ b/drehendz/src/app/layouts/product/product-detail/product-detail.component.html
@@ -10,13 +10,13 @@
           <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Product Price</h6>
+                <h6 class="my-0">Price</h6>
               </div>
               <span class="text-muted" style="color:crimson !important">$ {{product.productPrice}}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Product Seller</h6>
+                <h6 class="my-0">Brand</h6>
               </div>
               <span class="text-muted" style="color:crimson !important">{{product.productSeller}}</span>
             </li>
