--- a/drehendz/src/app/layouts/product/checkout/products/products.component.html
+++ b/drehendz/src/app/layouts/product/checkout/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-condensed" *ngFor="let product of checkOutProducts">
+        <li class="list-group-item d-flex justify-content-between lh-condensed" *ngFor="let product of checkoutProducts">
             <div>
                 <img [src]="product.productImageUrl" [alt]="product.productName" 
                 width="150" height="100">
