--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -63,7 +63,7 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
           </li>
 
           <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()" >
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.dispayName}}</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" *ngIf="authService.isAdmin()"routerLink="/">Manage Orders</a>
               <a class="dropdown-item" *ngIf="authService.isAdmin()" [routerLink]="['/products/all-products']">Manage Products</a>
