--- a/drehendz/src/app/layouts/product/add-product/add-product.component.html
+++ b/drehendz/src/app/layouts/product/add-product/add-product.component.html
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                   <label for="productQuatity">Product Quantity</label>
-                                  <input type="text" class="form-control" id="productQuatity" name="productQuantity" [(ngModel)]="product.productQuatity" placeholder="Product Quantity"
+                                  <input type="text" class="form-control" id="productQuantity" name="productQuantity" [(ngModel)]="product.productQuatity" placeholder="Product Quantity"
                                     value="" required>
                                   <div class="invalid-feedback">
                                     Valid last name is required.
