--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -35,7 +35,7 @@
                    <div class="item">
                        <div class="mb-r">
                            <!--Card-->
-                           <div class="card card-cascade wider">
+                           <div class="card card-cascade wider" >
                                <!--Card Image-->
                                <a [routerLink]="['/products/product', product.$key]">
                             <div class="view overlay hm-white-slight">
@@ -49,7 +49,7 @@
 
                             <!--Card Image-->
                             <!--Card content-->
-                            <div class="card-body trext-center no-padding">
+                            <div class="card-body text-center no-padding">
                                 <!--Catergory & Title-->
                                 <a class="text-muted">
                                   <h5>{{ product.productCategory }}</h5>
