--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -26,6 +26,12 @@
 
         </div>
         <div class="col-md-9">
+            
+        
+            <!--input
+            #query
+            (keyup) ="filterByBrand(query.value)"
+             type="text" class="form-control" placeholder="search.."-->
 
        <div class="container">
            <app-card-loader [loop]="3" [height]="800" *ngIf="loading"></app-card-loader>
