--- a/drehendz/src/app/layouts/user/user.component.html
+++ b/drehendz/src/app/layouts/user/user.component.html
@@ -10,6 +10,12 @@
         <li class="list-group-item hoverable">
             <a [routerLink]="['/users']">Your Profile</a>
         </li>
+        <li class="list-group-item hoverable">
+            <a [routerLink]="['/users', {outlets: {'profileOutlet': ['favorite-products']}}]">Your Wishlist</a>
+          </li>
+          <li class="list-group-item hoverable">
+            <a [routerLink]="['/users', {outlets: {'profileOutlet': ['cart-items']}}]">Your Cart</a>
+          </li>
     </ul>
 </div>
 <div class="col-sm-8">
