product list fix

--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -18,9 +18,9 @@
                 </select>
             </div>
          <ul class="list-group">
-             <li class="list-group-item">fashion outfit idea</li>
-             <li class="list-group-item">high end technology</li>
-             <li class="list-group-item">mobile device service</li>
+             <li *ngFor="let category of catergories" class="list-group-item">fashion outfit idea</li>
+             <!--li class="list-group-item">high end technology</li-->
+             <!--li class="list-group-item">mobile device service</li-->
 
          </ul>
 
