fix cart remove item

--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -18,7 +18,7 @@
                 </select>
             </div>
          <ul class="list-group">
-             <li *ngFor="let category of categories | async" class="list-group-item">  {{category.name}} </li>
+             <li *ngFor="let category of categories"> {{category.name}} </li>
              <!--li class="list-group-item">high end technology</li-->
              <!--li class="list-group-item">mobile device service</li-->
 
