--- a/drehendz/src/app/layouts/product/checkout/result/result.component.html
+++ b/drehendz/src/app/layouts/product/checkout/result/result.component.html
@@ -11,7 +11,7 @@
                   <br>
                  Kensignton, JMD 7664
                   <br>
-                  <abbr title="Phone">P:</abbr> (+91) 8124794942
+                  <abbr title="Phone">P:</abbr> (+1876) 324-5314
                 </address>
               </div>
               <div class="col-xs-6 col-sm-6 col-md-6 text-right">
@@ -61,7 +61,7 @@
                         <strong>{{totalPrice}}</strong>
                       </p>
                       <p>
-                        <strong>₹ {{tax}}</strong>
+                        <strong>$ {{tax}}</strong>
                       </p>
                     </td>
                   </tr>
@@ -72,13 +72,13 @@
                       <p><strong>Total: </strong></p>
                     </td>
                     <td class="text-center text-danger">
-                      <h4><strong>₹ {{totalPrice + tax }}</strong></h4>
+                      <h4><strong>$ {{totalPrice + tax }}</strong></h4>
                     </td>
                   </tr>
                 </tbody>
               </table>
               <button type="button" class="btn btn-success btn-lg btn-block">
-                Pay Now   <span class="glyphicon glyphicon-chevron-right"></span>
+                Place Order   <span class="glyphicon glyphicon-chevron-right"></span>
               </button>
             </div>
           </div>
