--- a/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
+++ b/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
@@ -11,7 +11,7 @@
     <!--Card image-->
     <a [routerLink]="['/products/product', product.$key]" >
     <div class="view overlay hm-white-slightly">
-        <img [src]="product.productImageURL" class="img-fluid" alt="" width="360px" height="640px">
+        <img [src]="product.productImageUrl" class="img-fluid" alt="" width="360px" height="640px">
         <a>
                 <div class="mask waves-effect waves-light" mdbRippleRadius></div>
      </a>
@@ -56,5 +56,5 @@
 </div>
 
 <div class="container" *ngIf="favoriteProducts.length === 0">
-        <app-no-products-found [title]="messageTitle" [description]="messageDescription"--></app-no-products-found>
+        <!--app-no-products-found [title]="messageTitle" [description]="messageDescription"--><!--/app-no-products-found-->
 </div>
