--- a/drehendz/src/app/shared/components/no-products-found/no-products-found.component.html
+++ b/drehendz/src/app/shared/components/no-products-found/no-products-found.component.html
@@ -1,8 +1,7 @@
 <div class="row">
         <div class="col-md-12">
           <div class="error-template">
-            <h1>
-              Oops!</h1>
+            <h1> Sorry !</h1>
             <h2>
               {{title}}</h2>
             <div class="error-details">
