--- a/drehendz/src/app/layouts/product/checkout/billing-details/billing-details.component.html
+++ b/drehendz/src/app/layouts/product/checkout/billing-details/billing-details.component.html
@@ -53,7 +53,11 @@
                 <label for="country">Country</label>
                 <select class="custom-select d-block w-100" id="country" required [(ngModel)]="userDetail.country" name="country">
                   <option value="">Choose...</option>
+                  <option>Jamaica</option>
                   <option>United States</option>
+                  <option>Canada</option>
+
+
                 </select>
                 <div class="invalid-feedback">
                   Please select a valid country.
