updates the template for billing index

--- a/drehendz/src/app/index/footer/footer.component.html
+++ b/drehendz/src/app/index/footer/footer.component.html
@@ -1,32 +1,124 @@
-<footer class="page-footer indigo center-on-small-only mt-3 ">
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color lighten-3 pt-4">
 
-<div class="quicklinks">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h6>Stay Connected</h6>
-                <a href="https://www.instagram.com/drehendz">Instagram</a>
-                <br>
-                <a href="htts://www.facebook.com/dreEndz">Facebook</a>
-                <br>
-                <a href="https://www.youtube.com/drehendz">YouTube channel</a>
-            </div>
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Content -->
+          <h5 class="font-weight-bold text-uppercase mb-4">store</h5>
+          <p>shop your favorite brands.</p>
+          <p>brands such as boohoo, primark, clarks, topman and much more....</p>
+
         </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                <a href="https://drehendz.com/products/all-products">products</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="info@drehendz.com">contact us</a>
+              </p>
+            </li>
+         
+            
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Contact details -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                 Portmore, SC JMACE13, JA
+              </p>
+            </li>
+            <li>
+              <p>
+                info@drehendz.com
+              </p>
+            </li>
+            <li>
+              <p>
+                + 1876 830 5637
+              </p>
+            </li>
+            
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+
+          <!-- Social buttons -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+
+          <!-- Instagram +-->
+          <a type="button" mdbBtn floating="true" mdbWavesEffect>
+            <i class="fa fa-instagram"></i>
+
+          </a>
+
+          <!-- Facebook -->
+          <a mdbBtn floating="true" type="button"  mdbWavesEffect>
+            <i class="fa fa-facebook"></i>
+          </a>
+
+          <!-- Pinterest+-->
+          <a type="button" mdbBtn floating="true"  mdbWavesEffect>
+            <i class="fa fa-pinterest"></i>
+
+          </a>
+          <!-- Twitter -->
+          <a type="button" mdbBtn floating="true"  mdbWavesEffect >
+            <i class="fa fa-twitter"></i>
+          </a>
+          
+        
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
     </div>
-</div>
+    <!-- Footer Links -->
 
-
-
-<div class="footer-copyright" >
-    <div class="container-fluid">
-        &copy; 2019
-        <a href="mailto:info@drehendz.com">drehendz.com</a>
-        <span style="float: left">
-        <i class="fa fa-globe"></i>
- 
-    <a href="http://drehendz.com" target="blank">user agreement</a>
-</span>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019-2020 
+      <a href = "mailto: info@drehendz.com"> drehendz.com</a>
     </div>
-</div>
+    <!-- Copyright -->
 
-</footer>
+  </footer>
+  <!-- Footer -->
