--- a/drehendz/src/app/index/index.component.html
+++ b/drehendz/src/app/index/index.component.html
@@ -52,7 +52,60 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                  <span class="sr-only">Next</span>
             </a>
-           </div>
+           </div> 
+           <br>
+           <div class="jumbotron" >
+
+            <h3   style="text-align: center; font-family: sans-serif;"  > DREHENDZ STORE </h3>
+         
+            <P> 
+                At drehendz we make it easy and affordable for you to
+               be a fashion icon, since fashion is a way to express the outward image 
+                that reflects the confidence we feel inside, wether your social media frenzy,
+                old plain jane, life of the party the aim is to make you feel like one 
+                in a million and giving you updates in the latest in trends worldwide. Self explantory 
+                drehendz is the chill spot to relax or vibe in authentic outfit to express tropical the
+                lifestyle.
+            </P>
+             </div>
            <br>
            <app-best-product></app-best-product>
+  
+       <br>
+       <div class="card bg-dark text-white">
+        <img class="card-img" src="../../assets/img/resize-2.png" alt="Card image">
+        <div class="card-img-overlay">
+          <h5 class="card-title" style="text-align: center;font-size: large; color: blanchedalmond; font-weight: bold;   font-size: 40px;   "  >Apparel</h5>
+          <p class="card-text" style="text-align:center; border-right: burlywood;  font-size: 20px; color: brown;    " > 2020 trends in clothing of all types compelling apparel to fit daily, to rock and embrace fashion.</p>
+           <!-- <a> <button style = "text-align: center;" >   Shop Now  </button> </a> -->
+        </div>
+      </div>
+       <br>
+     <div class="card-group">
+  <div class="card">
+    <img src="../../assets/img/UNADJUSTEDNONRAW_thumb_21c.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Rompers</h5>
+      <p class="card-text"> Browse for some of the best looking backless, short and long rompers the latest trends with an authentic apparel.
+        </p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="../../assets/img/UNADJUSTEDNONRAW_thumb_21b.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Pants</h5>
+      <p class="card-text"> Wear with class and pride get killer wide palazzo pants, track suit or prep shorts.
+      </p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="../../assets/img/IMG_0250.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Dress</h5>
+      <p class="card-text"> Clubbing with friends or just chilling on the hendz get best looking dress that take you on lookbook adventure.</p>
+    </div>
+  </div>
+</div>
+<br>
+           
 </div>
