--- a/drehendz/src/app/layouts/product/checkout/billing-details/billing-details.component.html
+++ b/drehendz/src/app/layouts/product/checkout/billing-details/billing-details.component.html
@@ -67,7 +67,13 @@
                 <label for="state">State</label>
                 <select class="custom-select d-block w-100" id="state" [(ngModel)]="userDetail.state" name="state" required>
                   <option value="">Choose...</option>
+                  <option>St Catherine</option>
+                  <option>St Andrew</option>
+                  <option>Kingston</option>
+                  <option>St James</option>
                   <option>California</option>
+                  <option>New York</option>
+                  <option>Connecticut</option>
                 </select>
                 <div class="invalid-feedback">
                   Please provide a valid state.
