--- a/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
+++ b/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
@@ -56,5 +56,5 @@
 </div>
 
 <div class="container" *ngIf="favoriteProducts.length === 0">
-        <!--app-no-products-found [title]="messageTitle" [description]="messageDescription"--><!--/app-no-products-found-->
+        <app-no-products-found [title]="messageTitle" [description]="messageDescription"></app-no-products-found>
 </div>
