--- a/drehendz/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/drehendz/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -16,16 +16,17 @@
             </h1>
             <h2>404 Page Not Found</h2>
             <div class="error-details">
-                Sorry, an error has ocurred, Requested page not found!
+                Sorry, an error has ocurred, Requested page not found! if you need order 
+                any of our products click contact us to send an email.
             </div>
             <div class="error-actions">
                 <a href="/" class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-home"></span>
                 Take Me Home
                 </a>
-                <a href="/" class="btn btn-defualt btn-lg">
+                <a href = "mailto: info@drehendz.com" class="btn btn-defualt btn-lg">
                 <span class="glphicon glyphicon-envelope"></span>
-                Contact Support
+                Contact Us
                 </a>
         </div>
     </div>
