--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -6,8 +6,10 @@
     <router-outlet #o="outlet"></router-outlet>
   </main>
 
-  <!-- <app-footer></app-footer> -->
   <app-loader-spinner></app-loader-spinner>
+
+  <app-footer></app-footer>
+
 </div>
 
 
