--- a/drehendz/src/app/index/index.component.html
+++ b/drehendz/src/app/index/index.component.html
@@ -76,7 +76,7 @@
         <img class="card-img" src="../../assets/img/resize-2.png" alt="Card image">
         <div class="card-img-overlay">
           <h5 class="card-title" style="text-align: center;font-size: large; color: blanchedalmond; font-weight: bold;   font-size: 40px;   "  >Apparel</h5>
-          <p class="card-text" style="text-align:center; border-right: burlywood;  font-size: 20px; color: brown;    " > 2020 trends in clothing of all types compelling apparel to fit daily, to rock and embrace fashion.</p>
+          <p class="card-text" style="text-align:center; border-right: burlywood;  font-size: 20px; color: brown;    " > 2020 trends in clothing </p>
            <!-- <a> <button style = "text-align: center;" >   Shop Now  </button> </a> -->
         </div>
       </div>
