new update bug fixes and new ui

--- a/drehendz/src/app/index/login/login.component.html
+++ b/drehendz/src/app/index/login/login.component.html
@@ -36,9 +36,9 @@ placeholder="Password">
 
 
 
-    <button type="button" class="btn waves-light" (click)="signInWithGoogle()" style="background-color: #dd4b39">
+    <button type="button" class="btn waves-light" (click)="login()" style="background-color: #dd4b39">
         <i class="fa fa-google" aria-hidden="true"></i>
-        Sign in with Google
+        Sign in 
       </button>
 
 </div>
@@ -46,6 +46,7 @@ placeholder="Password">
 </form>
 
 </div>
+
 
 <br>
   <p>
