--- a/drehendz/src/app/admin/add-product/add-product.component.html
+++ b/drehendz/src/app/admin/add-product/add-product.component.html
@@ -1,4 +1,41 @@
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true"> 
+<form>
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input id="title" type="text" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="price">price</label>
+    <div class="input-group">
+      <span class="input-group-addon">$</span>
+      <input id="price" type="text" class="form-control">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="category">category</label>
+    <select ngModel name="category" id="category"  class="form-control">
+      <option value=""></option>
+      <option *ngFor="let c of categories$ | async" [value]="c.$key" >
+        {{c.key}}
+      </option>
+  </select>
+    <div class="form-group">
+      <label for="imageUrl">Image Url</label>
+      <input id="imageUrl" type="text" class="form-control">
+    </div>
+  </div>
+  <button class="btn-primary">save</button>
+</form>
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true"> 
 
 
 <div class="modal-dialog" role="document">
@@ -75,4 +112,4 @@
     </div>
 </div>
 
-</div>          
+</div>           -->
