--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -1,19 +1,11 @@
-<div class="container">
+<app-navbar></app-navbar>
 
-  <app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-  <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
-    <router-outlet #o="outlet"></router-outlet>
-  </main>
-
-  <app-loader-spinner></app-loader-spinner>
-
-  <app-footer></app-footer>
-
-</div>
-
-
-
-
-
+<!-- <main role="main" class="container">
+  <div class="starter-template">
+    <h1>Bootstrap starter template</h1>
+    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+  </div>
+ -->
 
