--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -1,21 +1,72 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" routerLink="/"><img src="../../../assets/logo_img/logo_official.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<!--Navbar-->
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:;;" [routerLink]="['/products/favorite-products']">
+          <i class="fa fa-heart">
+            <!-- <span class="mt-2"> {{productService.navbarFavProdCount}}</span> -->
+          </i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:;;" [routerLink]="['/products/cart-items']">
+          <i class="fa fa-shopping-cart">
+            <!-- <span class="mt-2"> {{productService.navbarCartCount}}</span> -->
+          </i>
+        </a>
+      </li>
+      <ng-template #anonymousUser>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">
+            login </a>
+        </li>
+      </ng-template>
+      <li ngbDropdown class="nav-item dropdown" *ngIf="appUser; else anonymousUser">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          {{appUser.name}}
+        </a>
+        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" routerLink="/products/my-orders">my orders</a>
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" routerLink="/admin-orders">manage orders</a>
+            <a class="dropdown-item" routerLink="/admin-products">manage products</a>
+          </ng-container>
+          <a class="dropdown-item" (click)="logout()">logout</a>
+
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+
+<!-- 
+Navbar updated this nav-bar for new release on the platform 2020
 <nav class="navbar navbar-expand-lg navbar-dark">
 
-    <!--Navbar brand-->
+    Navbar brand
 <a class="navbar-brand" routerLink="/" >drehendz</a>
 
-  <!--Collapse button-->
+  Collapse button
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
 aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
 <span  class="navbar-toggler-icon"></span>
 </button>
 
-<!--Collapsible content-->
+Collapsible content
 <div class="collapse navbar-collapse" id="basicExampleNav">
 
 
-<!--Links-->
+Links
 <ul class="navbar-nav  ml-auto">
    
     <li class="nav-item">
@@ -25,7 +76,7 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
          
 </ul>
 
-<!--Links-->
+Links
 
 <ul class="navbar-nav ml-auto">
     <li class="nav-item">
@@ -86,4 +137,4 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 </nav>
 
 
-
+ -->
