--- a/drehendz/src/styles.scss
+++ b/drehendz/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./assets/theme/color.scss";
-@import "./assets/theme/function.scss"; 
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+@import "~bootstrap/dist/css/bootstrap.css";
 
+body{
+    padding-top: 80px;
+}
