--- a/drehendz/src/app/admin/add-product/add-product.component.html
+++ b/drehendz/src/app/admin/add-product/add-product.component.html
@@ -1,13 +1,13 @@
-<form>
+<form #f="ngForm" (ngSubmit)=save(f.value) >
   <div class="form-group">
     <label for="title">Title</label>
-    <input id="title" type="text" class="form-control">
+    <input ngModel name="title" id="title" type="text" class="form-control">
   </div>
   <div class="form-group">
     <label for="price">price</label>
     <div class="input-group">
       <span class="input-group-addon">$</span>
-      <input id="price" type="text" class="form-control">
+      <input ngModel name="price" id="price" type="text" class="form-control">
     </div>
   </div>
   <div class="form-group">
@@ -20,7 +20,7 @@
   </select>
     <div class="form-group">
       <label for="imageUrl">Image Url</label>
-      <input id="imageUrl" type="text" class="form-control">
+      <input ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
     </div>
   </div>
   <button class="btn-primary">save</button>
