working to update website ux

--- a/drehendz/src/app/admin/admin-products/admin-products.component.html
+++ b/drehendz/src/app/admin/admin-products/admin-products.component.html
@@ -1,1 +1,26 @@
-<a routerLink="/add-product" class="btn btn-primary"> New Product </a>
+<p>
+    <a routerLink="/admin-products/new" class="btn btn-primary"> New Product </a>
+</p>
+
+<!-- <p>
+    <input #query (keyup)="filter(query.$key)" type="text" class="form-control" placeholder="search..">
+</p> -->
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th>Title</th>
+            <th>price</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor=" let p of filteredProducts">
+            <td> {{p.$value.title}} </td>
+            <td> {{p.$value.price}} </td>
+            <td>
+                <a [routerLink]="['/admin-products', p.$key]">Edit
+                </a>
+            </td>
+        </tr>
+    </tbody>
+</table>
