--- a/drehendz/src/app/admin/add-product/add-product.component.html
+++ b/drehendz/src/app/admin/add-product/add-product.component.html
@@ -3,20 +3,23 @@
     <form #f="ngForm" (ngSubmit)=save(f.value)>
       <div class="form-group">
         <label for="title">Title</label>
-        <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control" required>
+        <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control"
+          required>
         <div class="alert alert-danger" *ngIf="title.touched && title.invalid">item title required</div>
       </div>
       <div class="form-group">
         <label for="price">price</label>
         <div class="input-group">
           <span class="input-group-addon">$</span>
-          <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="text" class="form-control" required>
+          <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="text" class="form-control"
+            required>
         </div>
       </div>
       <div class="alert alert-danger" *ngIf="price.touched && price.invalid">price is required</div>
       <div class="form-group">
         <label for="category">category</label>
-        <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
+        <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control"
+          required>
           <option value=""></option>
           <option *ngFor="let c of categories$ | async" [value]="c.$key">
             {{c.key}}
@@ -26,11 +29,12 @@
       <div class="alert alert-danger" *ngIf="category.touched && category.invalid">please select category</div>
       <div class="form-group">
         <label for="imageUrl">Image Url</label>
-        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required>
+        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text"
+          class="form-control" required>
       </div>
       <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">image is required</div>
       <button class="btn-primary">save</button>
-      <button type="button"  (click)="delete()" class="btn btn-danger">delete</button>
+      <button type="button" (click)="delete()" class="btn btn-danger">delete</button>
     </form>
   </div>
 
