--- a/drehendz/src/app/admin/add-product/add-product.component.html
+++ b/drehendz/src/app/admin/add-product/add-product.component.html
@@ -9,10 +9,15 @@
       </div>
       <div class="form-group">
         <label for="price">price</label>
-        <div class="input-group">
-          <span class="input-group-addon">$</span>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
+          </div>
           <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="text" class="form-control"
-            required>
+            aria-label="Amount (to the nearest dollar)" required>
+          <div class="input-group-append">
+            <span class="input-group-text">.00</span>
+          </div>
         </div>
       </div>
       <div class="alert alert-danger" *ngIf="price.touched && price.invalid">price is required</div>
@@ -21,8 +26,8 @@
         <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control"
           required>
           <option value=""></option>
-          <option *ngFor="let c of categories$ | async" [value]="c.$key">
-            {{c.key}}
+          <option *ngFor="let c of categories$ | async" [value]="c.name">
+            {{c.name}}
           </option>
         </select>
       </div>
