--- a/drehendz/src/app/admin/admin-products/admin-products.component.html
+++ b/drehendz/src/app/admin/admin-products/admin-products.component.html
@@ -2,23 +2,23 @@
     <a routerLink="/admin-products/new" class="btn btn-primary"> New Product </a>
 </p>
 
-<!-- <p>
-    <input #query (keyup)="filter(query.$key)" type="text" class="form-control" placeholder="search..">
-</p> -->
+<p>
+    <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="search..">
+</p>
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th>Title</th>
-            <th>price</th>
-            <th></th>
+            <th scope="col">Title</th>
+            <th scope="col" >price</th>
+            <th scope="col">edit</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor=" let p of filteredProducts">
-            <td> {{p.$value.title}} </td>
-            <td> {{p.$value.price}} </td>
+        <tr *ngFor=" let p of filteredProducts ">
+            <td> {{p.payload.val().title}} </td>
+            <td> {{p.payload.val().price}} </td>
             <td>
-                <a [routerLink]="['/admin-products', p.$key]">Edit
+                <a [routerLink]="['/admin-products', p.key]">edit
                 </a>
             </td>
         </tr>
