--- a/drehendz/src/app/layouts/product/product-filter/product-filter.component.html
+++ b/drehendz/src/app/layouts/product/product-filter/product-filter.component.html
@@ -1,12 +1,14 @@
 <div class="sticky-top">
+<div class="list-group ">
+    <a class="list-group-item list-group-item-action" [classActive]="!category" routerLink="/">
+        All
+    </a>
+    <div *ngFor="let c of categories$ | async" class="list-group">
+        <a [classActive]="categor === c.name" routerLink="/" [queryParams]="{category: c.name}"
+            class="list-group-item list-group-item-action">
+            {{c.name}}
 
-    <div class="list-group">
-        <a class="list-group-item list group-item-action" [class.active]="!category" routerLink="/">
-            All Categories
-        </a>
-        <a *ngFor="let c of categories$ | async" routerLink="/" [queryParams]="{category: c.key} "
-            class="list-group-item list-group-item-action" [class.active]="category === c.key">
-            {{c.key}}
         </a>
     </div>
+</div>
 </div>
