--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -2,8 +2,8 @@
 
 
    
-      <div class="card" style="width: 18rem;" *ngFor="let p of filteredProducts">
-        <img [src]="p.payload.val().imageUrl" class="card-img-top" alt="...">
+    <div class="card" *ngIf="product.payload.val().title "  style="width: 18rem;">
+        <img [src]="p.payload.val().value" class="card-img-top" *ngIf="product.payload.val().imageUrl"  alt="...">
         <div class="card-body">
           <h5 class="card-title">{{p.payload.val().title}}</h5>
           <h5 class="card-title">{{p.payload.val().category}}</h5>
@@ -13,6 +13,7 @@
           <button class="btn btn-primary"> Add to cart</button>
         </div>
       </div>
+
 
     
   
