--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/products/cart-items']">
           <i class="fa fa-shopping-cart">
-            <span class="badge badge-warning">  {{shoppingCartCouter}} </span>
+            <span class="badge badge-warning">  {{shoppingCartCounter}} </span>
           </i>
         </a>
       </li>
