--- a/drehendz/src/app/layouts/product/product-filter/product-filter.component.html
+++ b/drehendz/src/app/layouts/product/product-filter/product-filter.component.html
@@ -1,10 +1,10 @@
 <div class="sticky-top">
 <div class="list-group ">
-    <a class="list-group-item list-group-item-action" [classActive]="!category" routerLink="/">
+    <a class="list-group-item list-group-item-action" routerLink="/">
         All
     </a>
     <div *ngFor="let c of categories$ | async" class="list-group">
-        <a [classActive]="categor === c.name" routerLink="/" [queryParams]="{category: c.name}"
+        <a routerLink="/" [queryParams]="{category: c.name}"
             class="list-group-item list-group-item-action">
             {{c.name}}
 
